syntax = "proto3";

package io.flomesh.demo.grpc;
import "common.proto";
option java_multiple_files = true;
option java_package = "io.flomesh.demo.grpc.stub";
option java_outer_classname = "BookStoreProto";

service BookstoreService {
  rpc SellBook(Empty) returns (SuccessResponse) {}
  rpc Reset(Empty) returns (Empty) {}
  rpc Raw(Empty) returns (RawResponse) {}
}

