syntax = "proto3";

package io.flomesh.demo.grpc;
import "common.proto";
option java_multiple_files = true;
option java_package = "io.flomesh.demo.grpc.stub";
option java_outer_classname = "BookWarehouseProto";

service BookWarehouseService {
  rpc RestockBooks(RestockBooksRequest) returns (SuccessResponse) {}
  rpc ListBooks(Empty) returns (ListBooksResponse) {}
}

message RestockBooksRequest {
  string id = 1;
  int32 quantity = 2;
}

message ListBooksResponse {
  repeated Book books = 1;
}

